HEAD
    + Now symlinks are dereferenced when tranfering the files to the slaves
    + Added deploy/auto-update config key to enable/disable the auto-update
      of base images before the deploy of scenarios
    + Added pre-update and post-update sections in the base image definitions
    + Added updateimg command that allow the update of base images
    + Added 'sikuli' test type to run sikuli tests in Windows machines
    + Use binmode in the file handler for the put command
    + Use IP set to eth0 in the scenario if any
    + Added script to generate the bundle for the windows slaves
    + Allow anste-master to run multiple scripts in the same host
    + New -vars option to override test vars with values in YAML file
    + Allow to substitute test variables with global values using $
    + Tests marked as setup or critical are not executed with -reuse
    + Added -nodestroy option to keep scenario running after finishing
    + Setup scripts now fail when any of the commands fail
    + Added support for global variables in test suites
    + Add support for trusty to properly bring up network interfaces
    + Remove TryCatch::Lite depend in anste-slave
    + Fix input read when asking for a character
    + Added ANSTE::Util::readChar method that reads a character and ignores
      the remaining characters in the line
    + Check for duplicated tests on a suite
    + Exit code is now != 0 if any test has failed
    + Print timestamps with each line in verbose mode
    + Fixed default path for chromedriver binary
    + Now config and cli vars are passed to the tests with the GLOBAL_ prefix
0.11
    + Added anste-init command to create the directory structure of a project
    + Added python-anste wrapper for python-selenium
    + Remove old Selenium 1.0 support
    + Remove deprecated Xen stuff
    + Remove support for deprecated XML format
    + Proper use of upstart instead of /etc/init.d for networking and dhcp
    + Use File::Slurp instead of Perl6::Slurp